# code-forces

./: .gitignore  CMakeLists.txt
118A/: a.out  main.cpp
122A/: a.out  main.cpp
1418C/: a.out  main.cpp
1676A/: a.out  main.cpp
1915F/: main.cpp  test.cpp
1A/: Makefile  main.cpp
200B/: a.out  main.cpp
276B/: main.cpp  test.cpp
276C/: main.cpp  test.cpp
58A/: a.out  main.cpp
69A/: a.out  main.cpp
